--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -558,11 +558,11 @@ a:hover {
 }
 
 .accordion-button::after {
-  background-image: url('/assets/images/plus.png');
+  background-image: url('../images/plus.png');
 }
 
 .accordion-button:not(.collapsed)::after {
-  background-image: url('/assets/images/minus.png');
+  background-image: url('../images/minus.png');
 }
 
 .ingredients {
